<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/StockSymbolText"
            android:layout_height="35dp"
            android:layout_width="wrap_content"
            tools:text="@string/StockSymbol"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/StockNameText"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/StockSymbolText"
            app:layout_constraintLeft_toLeftOf="@+id/StockSymbolText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            tools:text="@string/StockName"
            android:textSize="14sp"
            android:maxWidth="150dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/StockPriceText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            tools:text="@string/StockPrice"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@+id/StockNameText"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/StockChangeText"
            tools:text="@string/StockChange"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/StockChangeArrow"
            tools:text="@string/StockContentImage"
            app:layout_constraintRight_toLeftOf="@+id/StockChangeText"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="30sp"
            android:foregroundGravity="bottom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>